# openai-realtime-voice-chat-on-streamlit

./: .gitignore  README.md  main.py  pyproject.toml  st_utils.py  utils.py
